--- a/README.rdoc
+++ b/README.rdoc
@@ -4,8 +4,8 @@ Add copyrights to your source files.
 
 == Copyrights (I know this is a bit recursive)
 
-Copyright © 2009 Micah Martin.
-MM Copyrights and all included source files are distributed under terms of the GNU LGPL.
+Copyright © 2012 Micah Martin.
+MM Copyrights and all included source files are distributed under terms of the MIT License.
 
 == Install
 
